# proto/bright/basetype/basetype.pb.go
@@ -72,6 +72,58 @@ func (EndpointState) EnumDescriptor() ([]byte, []int) {
 	return file_bright_basetype_basetype_proto_rawDescGZIP(), []int{0}
 }
 
+type AccountState int32
+
+const (
+	AccountState_AccountUnkonwn   AccountState = 0
+	AccountState_AccountAvaliable AccountState = 10
+	AccountState_AccountLow       AccountState = 20
+	AccountState_AccountError     AccountState = 40
+)
+
+// Enum value maps for AccountState.
+var (
+	AccountState_name = map[int32]string{
+		0:  "AccountUnkonwn",
+		10: "AccountAvaliable",
+		20: "AccountLow",
+		40: "AccountError",
+	}
+	AccountState_value = map[string]int32{
+		"AccountUnkonwn":   0,
+		"AccountAvaliable": 10,
+		"AccountLow":       20,
+		"AccountError":     40,
+	}
+)
+
+func (x AccountState) Enum() *AccountState {
+	p := new(AccountState)
+	*p = x
+	return p
+}
+
+func (x AccountState) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (AccountState) Descriptor() protoreflect.EnumDescriptor {
+	return file_bright_basetype_basetype_proto_enumTypes[1].Descriptor()
+}
+
+func (AccountState) Type() protoreflect.EnumType {
+	return &file_bright_basetype_basetype_proto_enumTypes[1]
+}
+
+func (x AccountState) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use AccountState.Descriptor instead.
+func (AccountState) EnumDescriptor() ([]byte, []int) {
+	return file_bright_basetype_basetype_proto_rawDescGZIP(), []int{1}
+}
+
 var File_bright_basetype_basetype_proto protoreflect.FileDescriptor
 
 var file_bright_basetype_basetype_proto_rawDesc = []byte{
@@ -83,11 +135,16 @@ var file_bright_basetype_basetype_proto_rawDesc = []byte{
 	0x12, 0x15, 0x0a, 0x11, 0x45, 0x6e, 0x64, 0x70, 0x6f, 0x69, 0x6e, 0x74, 0x41, 0x76, 0x61, 0x6c,
 	0x69, 0x61, 0x62, 0x6c, 0x65, 0x10, 0x0a, 0x12, 0x11, 0x0a, 0x0d, 0x45, 0x6e, 0x64, 0x70, 0x6f,
 	0x69, 0x6e, 0x74, 0x50, 0x61, 0x72, 0x73, 0x65, 0x10, 0x14, 0x12, 0x11, 0x0a, 0x0d, 0x45, 0x6e,
-	0x64, 0x70, 0x6f, 0x69, 0x6e, 0x74, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x10, 0x28, 0x42, 0x2c, 0x5a,
-	0x2a, 0x79, 0x75, 0x6e, 0x2e, 0x74, 0x65, 0x61, 0x2f, 0x62, 0x6c, 0x6f, 0x63, 0x6b, 0x2f, 0x62,
-	0x72, 0x69, 0x67, 0x68, 0x74, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x62, 0x72, 0x69, 0x67,
-	0x68, 0x74, 0x2f, 0x62, 0x61, 0x73, 0x65, 0x74, 0x79, 0x70, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x33,
+	0x64, 0x70, 0x6f, 0x69, 0x6e, 0x74, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x10, 0x28, 0x2a, 0x5a, 0x0a,
+	0x0c, 0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x53, 0x74, 0x61, 0x74, 0x65, 0x12, 0x12, 0x0a,
+	0x0e, 0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x55, 0x6e, 0x6b, 0x6f, 0x6e, 0x77, 0x6e, 0x10,
+	0x00, 0x12, 0x14, 0x0a, 0x10, 0x41, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x41, 0x76, 0x61, 0x6c,
+	0x69, 0x61, 0x62, 0x6c, 0x65, 0x10, 0x0a, 0x12, 0x0e, 0x0a, 0x0a, 0x41, 0x63, 0x63, 0x6f, 0x75,
+	0x6e, 0x74, 0x4c, 0x6f, 0x77, 0x10, 0x14, 0x12, 0x10, 0x0a, 0x0c, 0x41, 0x63, 0x63, 0x6f, 0x75,
+	0x6e, 0x74, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x10, 0x28, 0x42, 0x2c, 0x5a, 0x2a, 0x79, 0x75, 0x6e,
+	0x2e, 0x74, 0x65, 0x61, 0x2f, 0x62, 0x6c, 0x6f, 0x63, 0x6b, 0x2f, 0x62, 0x72, 0x69, 0x67, 0x68,
+	0x74, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x62, 0x72, 0x69, 0x67, 0x68, 0x74, 0x2f, 0x62,
+	0x61, 0x73, 0x65, 0x74, 0x79, 0x70, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -102,9 +159,10 @@ func file_bright_basetype_basetype_proto_rawDescGZIP() []byte {
 	return file_bright_basetype_basetype_proto_rawDescData
 }
 
-var file_bright_basetype_basetype_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_bright_basetype_basetype_proto_enumTypes = make([]protoimpl.EnumInfo, 2)
 var file_bright_basetype_basetype_proto_goTypes = []interface{}{
 	(EndpointState)(0), // 0: basetype.EndpointState
+	(AccountState)(0),  // 1: basetype.AccountState
 }
 var file_bright_basetype_basetype_proto_depIdxs = []int32{
 	0, // [0:0] is the sub-list for method output_type
@@ -124,7 +182,7 @@ func file_bright_basetype_basetype_proto_init() {
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_bright_basetype_basetype_proto_rawDesc,
-			NumEnums:      1,
+			NumEnums:      2,
 			NumMessages:   0,
 			NumExtensions: 0,
 			NumServices:   0,
